add repo to cargo toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 edition = "2021"
 license = "MIT"
 description = "A Chess Library Written In Rust"
-repository = "" # TODO
+repository = "https://github.com/Shadowcat650/rchess"
 readme = "README.md"
 keywords = ["chess", "board", "chessboard"]
 categories = ["data-structures"]
