add documentation link

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "rchess"
-version = "1.0.0"
+version = "1.0.1"
 edition = "2021"
 license = "MIT"
 description = "A Chess Library Written In Rust"
 repository = "https://github.com/Shadowcat650/rchess"
+documentation = "https://docs.rs/rchess/1.0.1/rchess/"
 readme = "README.md"
 keywords = ["chess", "board", "chessboard"]
 categories = ["data-structures"]
