--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rchess"
 version = "2.0.0"
 edition = "2021"
-license = "MIT"
+license = "MIT OR Apache-2.0"
 description = "A Chess Library Written In Rust"
 repository = "https://github.com/Shadowcat650/rchess"
 documentation = "https://docs.rs/rchess/2.0.0/rchess/"
